--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
 .App {
   text-align: center;
+  display: flex;
+}
+
+.players-container {
+  width: 25%;
+  overflow: scroll;
+  height: 100vh;
+}
+
+.sitedata-container {
+  width: 70%;
 }
 
 .App-logo {
@@ -32,6 +43,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
